[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Objects/DoorSide/Door_Side_Open.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Objects/DoorSide/Door_Side_Close.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Objects/DoorSide/Door_Side_Mid.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Objects/Door/DoorSide.gd" type="Script" id=4]
[ext_resource path="res://UI/VisbilityNotifier/VisibilityNotifier2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://Audio/SFX/Door-Close.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/SFX/Door-Open.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "close",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "closed",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": false,
"name": "open",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "opened",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 88.6942, 127.595 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.6836, 59.8562 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 22.9568, 47.1807 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 22.9488, 112.388 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 57.0246, 36.141 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 124, 152 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 20, 97 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 24, 57 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 24, 40 )

[node name="DoorSide" type="StaticBody2D"]
collision_layer = 256
collision_mask = 256
script = ExtResource( 4 )

[node name="DoorSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "closed"
offset = Vector2( 0, 16 )

[node name="DoorArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2( 6.86169, -81.385 )
shape = SubResource( 2 )

[node name="PermanentCollision" type="StaticBody2D" parent="."]
collision_layer = 257

[node name="CollisionShape2D" type="CollisionShape2D" parent="PermanentCollision"]
position = Vector2( 54.8457, -148.787 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PermanentCollision"]
position = Vector2( 54.2728, 129.142 )
shape = SubResource( 4 )

[node name="DoorCloseCollision" type="StaticBody2D" parent="."]
collision_layer = 257

[node name="Close" type="CollisionShape2D" parent="DoorCloseCollision"]
position = Vector2( 54.0326, -30.4455 )
shape = SubResource( 5 )

[node name="Open" type="CollisionShape2D" parent="DoorCloseCollision"]
position = Vector2( -24.8287, 99.5599 )
shape = SubResource( 6 )

[node name="VisibilityNotifier2D" parent="." instance=ExtResource( 5 )]
position = Vector2( -1.52588e-05, -12 )
scale = Vector2( 19.2, 26.8 )

[node name="NPCOpenArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPCOpenArea"]
position = Vector2( 36, 24 )
shape = SubResource( 7 )

[node name="Occlusion" type="CollisionShape2D" parent="."]
position = Vector2( 52, 79 )
shape = SubResource( 8 )

[node name="Occlusion2" type="CollisionShape2D" parent="."]
position = Vector2( 56, -153 )
shape = SubResource( 9 )

[node name="DynamicOcclusion" type="CollisionShape2D" parent="."]
position = Vector2( 56, -56 )
shape = SubResource( 10 )

[node name="DoorCloseSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="DoorOpenSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
